@@ -95,7 +95,6 @@ namespace GXml {
 				if (this._attributes == null) {
 					this._attributes = new NamedAttrMap (this);
 				}
-				Test.message ("Getting Attributes NamedAttrMap");
 				return (NamedAttrMap) this._attributes;
 			}
 			internal set {
